cleaned up code

--- a/Local navigation/local avoidance.ipynb
+++ b/Local navigation/local avoidance.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-29T14:44:34.108289Z",
@@ -49,23 +56,18 @@
     "#i.e. the sensors already saw something\n",
     "#otherwise it fucks everything up\n",
     "\n",
-    "# This program implements obstacle avoidance using an ANN\n",
-    "# The inputs x1-7 are taken from the proximity sensors and scaled\n",
-    "# The inputs are multiplied by the weights \n",
-    "#   and used to set the motor powers\n",
-    "# The center button starts and stops the robot\n",
+    "# The center button restarts and stops the robot\n",
     "\n",
     "#sates:\n",
     "#0 the robot stops \n",
-    "#1 the robot arrives at the obstacle and choses which side to go around goes forward until the sensor chose (1 left or 5 right) doesnt see anythin\n",
+    "#1 the robot arrives at the obstacle \n",
+    "#  and choses which side to go around goes forward until the sensor chose (1 left or 5 right) doesnt see anythin\n",
+    "#2 the robot goes forward approx 1 thymio length\n",
+    "#3 the robot rotates until its sensor (1 or 5) sees the obstacle\n",
+    "#4 the robot follows the obstaclke on its length until its sees nothin\n",
+    "#5 the robot goes forward to completely avoid the obstacle \n",
     "\n",
-    "#3 the robot goes forward 1 thymio length\n",
-    "#4 the robot rotates until its sensor (1 or 5) sees the obstacle\n",
-    "#5 the robot follows the obstaclke on its length until its sees nothin\n",
-    "#6 the robot goes forward to completely avoid the obstacle \n",
-    "\n",
-    "# State for start and stop, why is this instruction here? (hint: look at the aseba transpile code)\n",
-    "adjust = 2000\n",
+    "adjust2 = 2000\n",
     "close_thresh = 1\n",
     "time = 0\n",
     "state = 1\n",
@@ -74,6 +76,8 @@
     "time_one_thym_dist = 150\n",
     "NONE = 0\n",
     "side = NONE \n",
+    "constant_scale = 20\n",
+    "adjust = 5\n",
     "    \n",
     "@onevent\n",
     "def button_center():\n",
@@ -94,7 +98,6 @@
     "\n",
     "    # Scale factors for sensors and constant factor\n",
     "    sensor_scale = 400\n",
-    "    \n",
     "    \n",
     "    x = [0,0,0,0,0]\n",
     "    \n",
@@ -130,51 +133,46 @@
     "            if right_prox > close_thresh:\n",
     "                side = RIGHT\n",
     "            if left_prox < close_thresh and right_prox < close_thresh: #the thymio turned and stops only if it sees nothin anymore\n",
-    "                state = 3\n",
+    "                state = 2\n",
     "    \n",
-    "### STATE 3 and 6 : the robot goes forward 1 thymio length ###                   \n",
-    "    if state == 3 or state == 6:\n",
-    "\n",
+    "### STATE 2 and 5 : the robot goes forward approx 1 thymio length ###                   \n",
+    "    if state == 2 or state == 5:\n",
     "        time += 1         \n",
     "        if time <= time_one_thym_dist:\n",
     "            y = [160,160]\n",
     "        elif time > time_one_thym_dist:\n",
     "            y = [0,0]\n",
-    "            if state == 3:\n",
+    "            if state == 2:\n",
     "                time = 0\n",
-    "                state = 4\n",
-    "            if state == 6:\n",
+    "                state = 3\n",
+    "            if state == 5:\n",
     "                time = 0\n",
     "                state = 0\n",
-    "                #state = 0 #stops the robot and terminates the avoidance \n",
     "            \n",
-    "### STATE 4 the robot rotates until its sensor (1 or 5) sees the obstacle###   \n",
-    "    adj = 5\n",
-    "    if state == 4: \n",
+    "### STATE 3 the robot rotates until its sensor (1 or 5) sees the obstacle###   \n",
+    "    if state == 3: \n",
     "        if side == RIGHT:\n",
-    "            if right_prox <= close_thresh + adj:\n",
+    "            if right_prox <= close_thresh + adjust:\n",
     "                y = [160,0]\n",
-    "            if right_prox > close_thresh + adj:\n",
-    "                state = 5\n",
+    "            if right_prox > close_thresh + adjust:\n",
+    "                state = 4\n",
     "        if side == LEFT:\n",
-    "            if left_prox <= close_thresh + adj:\n",
+    "            if left_prox <= close_thresh + adjust:\n",
     "                y = [0,160]\n",
-    "            if left_prox > close_thresh + adj:\n",
-    "                state = 5\n",
+    "            if left_prox > close_thresh + adjust:\n",
+    "                state = 4\n",
     "                \n",
-    "### STATE 5 the robot follows the obstacle on its length until its sees nothing###             \n",
-    "    if state == 5:\n",
-    "        constant_scale = 20\n",
-    "        left_prox_adjust = left_prox -adjust//sensor_scale\n",
-    "        right_prox_adjust = right_prox -adjust//sensor_scale\n",
+    "### STATE 4 the robot follows the obstacle on its length until its sees nothing###             \n",
+    "    if state == 4:\n",
+    "        left_prox_adjust = left_prox -adjust2//sensor_scale\n",
+    "        right_prox_adjust = right_prox -adjust2//sensor_scale\n",
     "        if side == RIGHT:\n",
     "            y = [80,80+right_prox_adjust*constant_scale]\n",
     "        if side == LEFT:\n",
     "            y = [80+left_prox_adjust*constant_scale,80]\n",
     "        if left_prox < close_thresh and right_prox < close_thresh:\n",
-    "            state = 6\n",
+    "            state = 5\n",
     "        \n",
-    "\n",
     "    # Set motor powers\n",
     "    motor_left_target = y[0]\n",
     "    motor_right_target = y[1]\n",
