--- a/main.ipynb
+++ b/main.ipynb
@@ -270,7 +270,7 @@
      "evalue": "invalid syntax (Temp/ipykernel_28976/1931744895.py, line 15)",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;36m  File \u001B[1;32m\"C:\\Users\\theog\\AppData\\Local\\Temp/ipykernel_28976/1931744895.py\"\u001B[1;36m, line \u001B[1;32m15\u001B[0m\n\u001B[1;33m    if vision.robot_detected(); np.linalg.norm(vision.robot.center - vision.)\u001B[0m\n\u001B[1;37m                              ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\theog\\AppData\\Local\\Temp/ipykernel_28976/1931744895.py\"\u001b[1;36m, line \u001b[1;32m15\u001b[0m\n\u001b[1;33m    if vision.robot_detected(); np.linalg.norm(vision.robot.center - vision.)\u001b[0m\n\u001b[1;37m                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -319,13 +319,181 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tdmclient.notebook\n",
+    "await tdmclient.notebook.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "motor_left_target = kalaman_speed_left\n",
+    "motor_right_target = kalman_speed_right\n",
+    "\n",
+    "%%run_python\n",
+    "\n",
+    "local_avoid_tresh = 4000\n",
+    "\n",
+    "@onevent\n",
+    "def prox():\n",
+    "    global global_mode\n",
+    "    \n",
+    "    x = [0,0,0,0,0] #we only look a the front sensors\n",
+    "    \n",
+    "    for i in range(len(x)):\n",
+    "    # Get and scale inputs\n",
+    "    x[i] = prox_horizontal[i] \n",
+    "    if x[i] >= local_avoid_tresh:\n",
+    "        global_mode = LOCAL_AVOIDANCE\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "## local navigation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%run_python #%%transpile_to_aseba # Change to show the code generated in Aseba\n",
+    "\n",
+    "#IMPORTANT:\n",
+    "#this programm needs to be launched only when the obsatcle is already detected\n",
+    "#i.e. the sensors already saw something\n",
+    "#otherwise it fucks everything up\n",
+    "\n",
+    "# The center button restarts and stops the robot\n",
+    "\n",
+    "#sates:\n",
+    "#0 the robot stops \n",
+    "#1 the robot arrives at the obstacle \n",
+    "#  and choses which side to go around goes forward until the sensor chose (1 left or 5 right) doesnt see anythin\n",
+    "#2 the robot goes forward approx 1 thymio length\n",
+    "#3 the robot rotates until its sensor (1 or 5) sees the obstacle\n",
+    "#4 the robot follows the obstaclke on its length until its sees nothin\n",
+    "#5 the robot goes forward to completely avoid the obstacle \n",
+    "\n",
+    "adjust2 = 2000\n",
+    "close_thresh = 1\n",
+    "time = 0\n",
+    "state = 1\n",
+    "y = [0,0] \n",
+    "timer_period[0] = 10\n",
+    "time_one_thym_dist = 150\n",
+    "NONE = 0\n",
+    "side = NONE \n",
+    "constant_scale = 20\n",
+    "adjust = 5    \n",
+    "\n",
+    "@onevent\n",
+    "def timer0():\n",
+    "    global prox_horizontal, motor_left_target, motor_right_target, button_center, state, y, NONE, side, time, global_mode\n",
+    "    #side constants\n",
+    "    LEFT = 1\n",
+    "    RIGHT = 2\n",
+    "    \n",
+    "    #asymetric w_l[1] != w_r[1] so the robot choses one side if it arrives straight on the obstacle\n",
+    "    w_l = [10, -15, -10, 6, 0]\n",
+    "    w_r = [-10, -10, 10, 0, 6]\n",
+    "\n",
+    "    # Scale factors for sensors and constant factor\n",
+    "    sensor_scale = 400\n",
+    "    \n",
+    "    x = [0,0,0,0,0]\n",
+    "    \n",
+    "    left_prox = prox_horizontal[0]// sensor_scale\n",
+    "    right_prox = prox_horizontal[4]// sensor_scale\n",
+    "    \n",
+    "### STATE 0 the robot stops###    \n",
+    "    if state == 0:\n",
+    "        time = 0\n",
+    "        y = [0,0]\n",
+    "        \n",
+    "### STATE 1  the robot arrives at the obstacle and choses which side to go around###         \n",
+    "    if state == 1:\n",
+    "        # Memory\n",
+    "        x[3] = y[0]//10\n",
+    "        x[4] = y[1]//10        \n",
+    "        \n",
+    "        for i in range(1,4): #we only take the 3 sensors of the middle\n",
+    "            # Get and scale inputs\n",
+    "            x[i-1] = prox_horizontal[i] // sensor_scale\n",
+    "            \n",
+    "        y = [60,60] \n",
+    "        tot = x[0]+x[1]+x[2]\n",
+    "        \n",
+    "        for i in range(len(x)):    \n",
+    "            # Compute outputs of neurons and set motor powers\n",
+    "            y[0] = y[0] + x[i] * w_l[i]\n",
+    "            y[1] = y[1] + x[i] * w_r[i]\n",
+    "        \n",
+    "        if tot < close_thresh :#the three middle sensors see nothing\n",
+    "            if left_prox > close_thresh:\n",
+    "                side = LEFT\n",
+    "            if right_prox > close_thresh:\n",
+    "                side = RIGHT\n",
+    "            if left_prox < close_thresh and right_prox < close_thresh: #the thymio turned and stops only if it sees nothin anymore\n",
+    "                state = 2\n",
+    "    \n",
+    "### STATE 2 and 5 : the robot goes forward approx 1 thymio length ###                   \n",
+    "    if state == 2 or state == 5:\n",
+    "        time += 1         \n",
+    "        if time <= time_one_thym_dist:\n",
+    "            y = [160,160]\n",
+    "        elif time > time_one_thym_dist:\n",
+    "            y = [0,0]\n",
+    "            if state == 2:\n",
+    "                time = 0\n",
+    "                state = 3\n",
+    "            if state == 5:\n",
+    "                time = 0\n",
+    "                state = 0\n",
+    "                global_state = GLOBAL_NAVIG\n",
+    "            \n",
+    "### STATE 3 the robot rotates until its sensor (1 or 5) sees the obstacle###   \n",
+    "    if state == 3: \n",
+    "        if side == RIGHT:\n",
+    "            if right_prox <= close_thresh + adjust:\n",
+    "                y = [160,0]\n",
+    "            if right_prox > close_thresh + adjust:\n",
+    "                state = 4\n",
+    "        if side == LEFT:\n",
+    "            if left_prox <= close_thresh + adjust:\n",
+    "                y = [0,160]\n",
+    "            if left_prox > close_thresh + adjust:\n",
+    "                state = 4\n",
+    "                \n",
+    "### STATE 4 the robot follows the obstacle on its length until its sees nothing###             \n",
+    "    if state == 4:\n",
+    "        left_prox_adjust = left_prox -adjust2//sensor_scale\n",
+    "        right_prox_adjust = right_prox -adjust2//sensor_scale\n",
+    "        if side == RIGHT:\n",
+    "            y = [80,80+right_prox_adjust*constant_scale]\n",
+    "        if side == LEFT:\n",
+    "            y = [80+left_prox_adjust*constant_scale,80]\n",
+    "        if left_prox < close_thresh and right_prox < close_thresh:\n",
+    "            state = 5\n",
+    "        \n",
+    "    # Set motor powers\n",
+    "    motor_left_target = y[0]\n",
+    "    motor_right_target = y[1]           "
+   ]
   }
  ],
  "metadata": {
