--- a/main.ipynb
+++ b/main.ipynb
@@ -76,6 +76,8 @@
     "from vision import Vision\n",
     "from IPython.display import clear_output\n",
     "from visualizer import get_visualization\n",
+    "from movement import move\n",
+    "import tdmclient.notebook\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -270,14 +272,14 @@
      "evalue": "invalid syntax (Temp/ipykernel_28976/1931744895.py, line 15)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\theog\\AppData\\Local\\Temp/ipykernel_28976/1931744895.py\"\u001b[1;36m, line \u001b[1;32m15\u001b[0m\n\u001b[1;33m    if vision.robot_detected(); np.linalg.norm(vision.robot.center - vision.)\u001b[0m\n\u001b[1;37m                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001B[1;36m  File \u001B[1;32m\"C:\\Users\\theog\\AppData\\Local\\Temp/ipykernel_28976/1931744895.py\"\u001B[1;36m, line \u001B[1;32m15\u001B[0m\n\u001B[1;33m    if vision.robot_detected(); np.linalg.norm(vision.robot.center - vision.)\u001B[0m\n\u001B[1;37m                              ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "from IPython.display import clear_output\n",
     "plt.figure()\n",
-    "\n",
+    "await tdmclient.notebook.start()\n",
     "vision.update()\n",
     "pltshow(cv2.cvtColor(get_visualization(vision, path_planner), cv2.COLOR_BGR2RGB))\n",
     "next_point_id = 1\n",
@@ -295,12 +297,16 @@
     "    if vision.robot_detected():\n",
     "        if np.linalg.norm(vision.robot.center - next_point) < min_dist:\n",
     "            if next_point_id != path_planner.path.shape[0] - 1:\n",
-    "                #send stop\n",
+    "                motor_right_target = 0\n",
+    "                motor_left_target = 0\n",
     "                break\n",
     "            else:\n",
     "                next_point_id += 1\n",
     "                next_point = path_planner.path[next_point_id]\n",
-    "                #send new point"
+    "                pos = [vision.robot.center[0], vision.robot.center[1], vision.robot.orientation]\n",
+    "                speed_robot = move(pos, next_point)\n",
+    "                motor_right_target = speed_robot[0]\n",
+    "                motor_left_target = speed_robot[1]"
    ]
   },
   {
