corretion kalman et ajout sur le main

--- a/main.ipynb
+++ b/main.ipynb
@@ -77,11 +77,13 @@
     "from IPython.display import clear_output\n",
     "from visualizer import get_visualization\n",
     "from movement import move\n",
+    "from Kalman_filter import Kalman_filter\n",
     "import tdmclient.notebook\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
     "vision = Vision(\"./src/test/example.png\")\n",
+    "kalman = Kalman_filter(vision)\n",
     "path_planner = Path_planner()\n",
     "\n",
     "def pltshow(img):\n",
@@ -292,7 +294,8 @@
     "    vision.update_frame()\n",
     "    vision.update()\n",
     "    pltshow(cv2.cvtColor(get_visualization(vision, path_planner), cv2.COLOR_BGR2RGB))\n",
-    "    # update kalman\n",
+    "    robot_speed = [motor_right_speed, motor_left_speed]\n",
+    "    kalman.update_kalman(vision, robot_speed)\n",
     "\n",
     "    if vision.robot_detected():\n",
     "        if np.linalg.norm(vision.robot.center - next_point) < min_dist:\n",
@@ -353,9 +356,9 @@
     "    \n",
     "    for i in range(len(x)):\n",
     "    # Get and scale inputs\n",
-    "    x[i] = prox_horizontal[i] \n",
-    "    if x[i] >= local_avoid_tresh:\n",
-    "        global_mode = LOCAL_AVOIDANCE\n"
+    "        x[i] = prox_horizontal[i]\n",
+    "        if x[i] >= local_avoid_tresh:\n",
+    "            global_mode = LOCAL_AVOIDANCE\n"
    ]
   },
   {
