corretion kalman et ajout sur le main

--- a/main.ipynb
+++ b/main.ipynb
@@ -292,7 +292,7 @@
     "\n",
     "while 1:\n",
     "    vision.update_frame()\n",
-    "    vision.update()\n",
+    "    vision.update_robot()\n",
     "    pltshow(cv2.cvtColor(get_visualization(vision, path_planner), cv2.COLOR_BGR2RGB))\n",
     "    robot_speed = [motor_right_speed, motor_left_speed]\n",
     "    kalman.update_kalman(vision, robot_speed)\n",
