tweak local avoidance (still not perfect)

--- a/Local navigation/local avoidance.ipynb
+++ b/Local navigation/local avoidance.ipynb
@@ -140,16 +140,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[548, 423]\n",
-      "[548, 421]\n",
-      "[548, 423]\n",
-      "[547, 422]\n",
-      "[549, 422]\n",
-      "[548, 421]\n",
-      "[548, 423]\n",
-      "[548, 422]\n",
-      "[549, 423]\n",
-      "[547, 422]\n"
+      "[953, 166]\n",
+      "[955, 166]\n",
+      "[955, 166]\n",
+      "[953, 166]\n",
+      "[955, 166]\n",
+      "[954, 166]\n",
+      "[949, 166]\n",
+      "[948, 165]\n",
+      "[948, 166]\n",
+      "[216, 116]\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,11 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_see_nothing(close_threshold=1, verbose=False):\n",
+    "def test_see_nothing_center(close_threshold=1, verbose=False):\n",
     "    \"\"\"\n",
     "    tests if the three middle sensors see nothing\n",
     "    \"\"\"\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,8 +245,8 @@
     "    \n",
     "    while not see_nothing:\n",
     "        #asymetric w_l[1] != w_r[1] so the robot choses one side if it arrives straight on the obstacle\n",
-    "        w_l = [8, -12, -8, 4, 0]\n",
-    "        w_r = [-8, -8, 8, 0, 4]\n",
+    "        w_l = [5, -10, -5, 4, 0]\n",
+    "        w_r = [-5, -5, 5, 0, 4]\n",
     "\n",
     "        x = [0,0,0,0,0]\n",
     "\n",
@@ -276,25 +276,26 @@
     "        \n",
     "        print(y)\n",
     "        \n",
-    "        await client.sleep(0.1)#let the variables be updated\n",
-    "        \n",
-    "        if test_see_nothing(1,True): \n",
-    "            see_nothing = True\n",
+    "        if test_see_nothing_center(1,True): \n",
     "            y = [0,0]\n",
     "            if left_prox > 1:\n",
     "                side = 'left'\n",
     "            if right_prox > 1:\n",
     "                side = 'right'\n",
     "                \n",
+    "        if test_see_nothing_center(1,True) and left_prox < 1 and right_prox < 1:\n",
+    "            see_nothing = True    \n",
+    "                \n",
     "            print(side)\n",
     "            \n",
     "        await node.set_variables(motors(y[0],y[1]))\n",
+    "        await client.sleep(0.1)#let the variables be updated\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
     "    \"\"\"\n",
     "    turn until obstcale is detected\n",
     "    \"\"\"\n",
-    "    adjust = 5\n",
+    "    adjust = 3\n",
     "    doneTurn = False\n",
     "    y = [0,0] \n",
     "    \n",
@@ -329,22 +330,22 @@
     "            if right_prox > 1 + adjust:\n",
     "                doneTurn = True\n",
     "                print(\"done turn right\")\n",
-    "                y = [0,0]\n",
+    "                \n",
     "        if side == 'left':\n",
     "            if left_prox <= 1 + adjust:\n",
     "                y = [0,80]\n",
     "            if left_prox > 1 + adjust:\n",
     "                doneTurn = True\n",
     "                print(\"done turn left\")\n",
-    "                y = [0,0]\n",
+    "        await node.set_variables(motors(y[0],y[1]))        \n",
     "        await client.sleep(0.1)#let the variables be updated\n",
-    "        await node.set_variables(motors(y[0],y[1]))\n",
+    "        \n",
     "               "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,8 +354,8 @@
     "    \"\"\"\n",
     "    follows the obstacle side until its end\n",
     "    \"\"\"\n",
-    "    adjust2 = 2000\n",
-    "    constant_scale = 20\n",
+    "    adjust2 = 1000\n",
+    "    constant_scale = 10\n",
     "    doneFollow = False\n",
     "    y = [0,0] \n",
     "    \n",
@@ -364,9 +365,9 @@
     "        \n",
     "    while not doneFollow:\n",
     "        \n",
-    "        if verbose: print(\"following wall\",side)\n",
+    "        if verbose: print(\"following wall detected by\",side, 'sensor')\n",
     "            \n",
-    "        prox_horizontal = node['prox.horizontal'][:-2]\n",
+    "        prox_horizontal = node['prox.horizontal'][:5]\n",
     "        left_prox = prox_horizontal[0]// sensor_scale\n",
     "        right_prox = prox_horizontal[4]// sensor_scale\n",
     "        \n",
@@ -379,20 +380,19 @@
     "            y = [80,80+right_prox_adjust*constant_scale]\n",
     "        if side == 'left':\n",
     "            y = [80+left_prox_adjust*constant_scale,80]\n",
+    "            \n",
+    "        await node.set_variables(motors(y[0],y[1]))    \n",
+    "        await client.sleep(0.1)#let the variables be updated\n",
+    "       \n",
     "        if left_prox < 1 and right_prox < 1:\n",
     "            doneFollow = True\n",
-    "            y = [0,0]\n",
     "            \n",
-    "        await client.sleep(0.1)#let the variables be updated\n",
-    "        await node.set_variables(motors(y[0],y[1]))\n",
-    "\n",
-    "await follow_obstacle(verbose = True)\n",
-    "               "
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,13 +403,13 @@
     "        side = 0;\n",
     "        await NN_avoid(verbose=verbose)\n",
     "        \n",
-    "        await go_straight(verbose=verbose)\n",
+    "        await go_straight(duration =3,verbose=verbose)\n",
     "        \n",
     "        await turn(verbose=verbose)\n",
     "        \n",
     "        await follow_obstacle(verbose=verbose)\n",
     "        \n",
-    "        await go_straight(verbose=verbose)\n",
+    "        await go_straight(duration=5,verbose=verbose)\n",
     "        \n",
     "        done = True\n",
     "        "
@@ -417,9 +417,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting avoidance with neural network\n",
+      "[2851, 4912, 4000, 4684, 4627]\n",
+      "[12, 10, 11, 0, 0]\n",
+      "[-15, 25]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 2443, 3167, 2579, 0]\n",
+      "[6, 7, 6, -2, 2]\n",
+      "[2, 53]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 2415, 3136, 2554, 0]\n",
+      "[6, 7, 6, 0, 5]\n",
+      "[10, 65]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 2401, 3157, 2554, 0]\n",
+      "[6, 7, 6, 1, 6]\n",
+      "[14, 69]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 3197, 2973, 2191]\n",
+      "[0, 7, 7, 1, 6]\n",
+      "[-21, 104]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 3193, 3057, 2264]\n",
+      "[0, 7, 7, -3, 10]\n",
+      "[-37, 120]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 3189, 3245, 2587]\n",
+      "[0, 7, 8, -4, 12]\n",
+      "[-46, 133]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 3289, 3320, 2791]\n",
+      "[0, 8, 8, -5, 13]\n",
+      "[-60, 132]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 2674, 3698, 3271]\n",
+      "[0, 6, 9, -6, 13]\n",
+      "[-49, 147]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 3668, 3635]\n",
+      "[0, 0, 9, -5, 14]\n",
+      "[15, 181]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 3412, 3813]\n",
+      "[0, 0, 8, 1, 18]\n",
+      "[44, 192]\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 4079]\n",
+      "[0, 0, 0, 4, 19]\n",
+      "[96, 156]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 4131]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2773]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2769]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2758]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2726]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2715]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2713]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2754]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2709]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2721]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2672]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 2689]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting avoidance with neural network\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[80, 80]\n",
+      "\t\t degagé de l'obstacle\n",
+      "right\n",
+      "Starting go straight behaviour\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "0\n",
+      "turning right\n",
+      "0\n",
+      "3\n",
+      "turning right\n",
+      "0\n",
+      "5\n",
+      "done turn right\n",
+      "following wall detected by right sensor\n",
+      "0\n",
+      "5\n",
+      "following wall detected by right sensor\n",
+      "0\n",
+      "6\n",
+      "following wall detected by right sensor\n",
+      "0\n",
+      "7\n",
+      "following wall detected by right sensor\n",
+      "0\n",
+      "6\n",
+      "following wall detected by right sensor\n",
+      "0\n",
+      "5\n",
+      "following wall detected by right sensor\n",
+      "0\n",
+      "0\n",
+      "Starting go straight behaviour\n"
+     ]
+    }
+   ],
    "source": [
     "await obstacle_avoidance()"
    ]
