--- a/main.ipynb
+++ b/main.ipynb
@@ -58,7 +58,6 @@
    "execution_count": 1,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -71,7 +70,7 @@
     "from time import sleep, time\n",
     "import ipywidgets as widgets\n",
     "_sys.path.append(\"./src\")\n",
-    "\n",
+    "import ipywidgets\n",
     "from global_navigation import Path_planner\n",
     "from vision import Vision\n",
     "from IPython.display import clear_output\n",
@@ -81,6 +80,7 @@
     "import tdmclient.notebook\n",
     "from local_navigation import *\n",
     "from time import sleep\n",
+    "from PIL import ImageColor\n",
     "\n",
     "%matplotlib inline\n"
    ]
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,10 +105,37 @@
     "    clear_output(wait = True)\n",
     "    plt.imshow(img)\n",
     "    plt.show()\n",
-    "#     plt.imshow(np.zeros((400,600)))\n",
-    "#     plt.show()\n",
+    "    \n",
+    "robot_cp = widgets.ColorPicker(\n",
+    "    concise=False,\n",
+    "    description='Robot',\n",
+    "    value='red',\n",
+    "    disabled=False\n",
+    ")\n",
+    "obstacles_cp = widgets.ColorPicker(\n",
+    "    concise=False,\n",
+    "    description='Obstacles',\n",
+    "    value='blue',\n",
+    "    disabled=False\n",
+    ")\n",
+    "goal_cp = widgets.ColorPicker(\n",
+    "    concise=False,\n",
+    "    description='Goal',\n",
+    "    value='green',\n",
+    "    disabled=False\n",
+    ")\n",
     "\n",
-    "#     clear_output(wait = True)"
+    "from ipywidgets import Layout, Button, Box\n",
+    "\n",
+    "items_layout = Layout( width='auto')     # override the default width of the button to 'auto' to let the button grow\n",
+    "\n",
+    "box_layout = Layout(display='flex',\n",
+    "                    flex_flow='column',\n",
+    "                    align_items='stretch',\n",
+    "                    width='100%')\n",
+    "\n",
+    "items = [robot_cp, goal_cp, obstacles_cp]\n",
+    "box_cp = Box(children=items, layout=box_layout)"
    ]
   },
   {
@@ -123,20 +150,6 @@
     "await node.lock()\n",
     "await node.wait_for_variables()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -220,6 +233,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ee28b7afbee4101b1a919efbd028528",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(ColorPicker(value='red', description='Robot'), ColorPicker(value='green', description='Goal'), C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "box_cp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "pycharm": {
@@ -228,9 +269,9 @@
    },
    "outputs": [],
    "source": [
-    "robot_color = np.array([199, 92, 95])\n",
-    "goal_color = np.array([107, 150, 102])\n",
-    "obstacles_color = np.array([22, 91, 126])\n",
+    "robot_color = np.array(ImageColor.getcolor(robot_cp.value, \"RGB\")))\n",
+    "goal_color = np.array(ImageColor.getcolor(goal_cp.value, \"RGB\"))\n",
+    "obstacles_color = np.array(ImageColor.getcolor(obstacles.value, \"RGB\"))\n",
     "\n",
     "vision.set_colors(obstacles_color, robot_color, goal_color)"
    ]
@@ -348,14 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## lessgo"
+    "# Run"
    ]
   },
   {
@@ -482,206 +516,6 @@
    "source": [
     " vision.disconnect_camera()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Node lock error",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mException\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_11864/2526995588.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mtdmclient\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnotebook\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[1;32mawait\u001B[0m \u001B[0mtdmclient\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnotebook\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstart\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;32m~\\miniconda3\\envs\\Basics of mobile robotics\\lib\\site-packages\\tdmclient\\notebook\\__init__.py\u001B[0m in \u001B[0;36mstart\u001B[1;34m(tdm_addr, tdm_port, **kwargs)\u001B[0m\n\u001B[0;32m     91\u001B[0m     \u001B[0mclient\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mClientAsync\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtdm_addr\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mtdm_addr\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtdm_port\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mtdm_port\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     92\u001B[0m     \u001B[0mnode\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32mawait\u001B[0m \u001B[0mclient\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mwait_for_node\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 93\u001B[1;33m     \u001B[1;32mawait\u001B[0m \u001B[0mnode\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlock\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     94\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     95\u001B[0m     \u001B[1;32mglobal\u001B[0m \u001B[0m_interactive_console\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\miniconda3\\envs\\Basics of mobile robotics\\lib\\site-packages\\tdmclient\\clientasyncnode.py\u001B[0m in \u001B[0;36mlock\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m     58\u001B[0m         \u001B[0mresult\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32myield\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlock_node\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     59\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0mresult\u001B[0m \u001B[1;32mis\u001B[0m \u001B[1;32mnot\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 60\u001B[1;33m             \u001B[1;32mraise\u001B[0m \u001B[0mException\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Node lock error\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     61\u001B[0m         \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     62\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mException\u001B[0m: Node lock error"
-     ]
-    }
-   ],
-   "source": [
-    "import tdmclient.notebook\n",
-    "await tdmclient.notebook.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "motor_left_target = kalaman_speed_left\n",
-    "motor_right_target = kalman_speed_right\n",
-    "\n",
-    "%%run_python\n",
-    "\n",
-    "local_avoid_tresh = 4000\n",
-    "\n",
-    "@onevent\n",
-    "def prox():\n",
-    "    global global_mode\n",
-    "    \n",
-    "    x = [0,0,0,0,0] #we only look a the front sensors\n",
-    "    \n",
-    "    for i in range(len(x)):\n",
-    "    # Get and scale inputs\n",
-    "        x[i] = prox_horizontal[i]\n",
-    "        if x[i] >= local_avoid_tresh:\n",
-    "            global_mode = LOCAL_AVOIDANCE\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "## local navigation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%run_python #%%transpile_to_aseba # Change to show the code generated in Aseba\n",
-    "\n",
-    "#IMPORTANT:\n",
-    "#this programm needs to be launched only when the obsatcle is already detected\n",
-    "#i.e. the sensors already saw something\n",
-    "#otherwise it fucks everything up\n",
-    "\n",
-    "# The center button restarts and stops the robot\n",
-    "\n",
-    "#sates:\n",
-    "#0 the robot stops \n",
-    "#1 the robot arrives at the obstacle \n",
-    "#  and choses which side to go around goes forward until the sensor chose (1 left or 5 right) doesnt see anythin\n",
-    "#2 the robot goes forward approx 1 thymio length\n",
-    "#3 the robot rotates until its sensor (1 or 5) sees the obstacle\n",
-    "#4 the robot follows the obstaclke on its length until its sees nothin\n",
-    "#5 the robot goes forward to completely avoid the obstacle \n",
-    "\n",
-    "adjust2 = 2000\n",
-    "close_thresh = 1\n",
-    "time = 0\n",
-    "state = 1\n",
-    "y = [0,0] \n",
-    "timer_period[0] = 10\n",
-    "time_one_thym_dist = 150\n",
-    "NONE = 0\n",
-    "side = NONE \n",
-    "constant_scale = 20\n",
-    "adjust = 5    \n",
-    "\n",
-    "@onevent\n",
-    "def timer0():\n",
-    "    global prox_horizontal, motor_left_target, motor_right_target, button_center, state, y, NONE, side, time, global_mode\n",
-    "    #side constants\n",
-    "    LEFT = 1\n",
-    "    RIGHT = 2\n",
-    "    \n",
-    "    #asymetric w_l[1] != w_r[1] so the robot choses one side if it arrives straight on the obstacle\n",
-    "    w_l = [10, -15, -10, 6, 0]\n",
-    "    w_r = [-10, -10, 10, 0, 6]\n",
-    "\n",
-    "    # Scale factors for sensors and constant factor\n",
-    "    sensor_scale = 400\n",
-    "    \n",
-    "    x = [0,0,0,0,0]\n",
-    "    \n",
-    "    left_prox = prox_horizontal[0]// sensor_scale\n",
-    "    right_prox = prox_horizontal[4]// sensor_scale\n",
-    "    \n",
-    "### STATE 0 the robot stops###    \n",
-    "    if state == 0:\n",
-    "        time = 0\n",
-    "        y = [0,0]\n",
-    "        \n",
-    "### STATE 1  the robot arrives at the obstacle and choses which side to go around###         \n",
-    "    if state == 1:\n",
-    "        # Memory\n",
-    "        x[3] = y[0]//10\n",
-    "        x[4] = y[1]//10        \n",
-    "        \n",
-    "        for i in range(1,4): #we only take the 3 sensors of the middle\n",
-    "            # Get and scale inputs\n",
-    "            x[i-1] = prox_horizontal[i] // sensor_scale\n",
-    "            \n",
-    "        y = [60,60] \n",
-    "        tot = x[0]+x[1]+x[2]\n",
-    "        \n",
-    "        for i in range(len(x)):    \n",
-    "            # Compute outputs of neurons and set motor powers\n",
-    "            y[0] = y[0] + x[i] * w_l[i]\n",
-    "            y[1] = y[1] + x[i] * w_r[i]\n",
-    "        \n",
-    "        if tot < close_thresh :#the three middle sensors see nothing\n",
-    "            if left_prox > close_thresh:\n",
-    "                side = LEFT\n",
-    "            if right_prox > close_thresh:\n",
-    "                side = RIGHT\n",
-    "            if left_prox < close_thresh and right_prox < close_thresh: #the thymio turned and stops only if it sees nothin anymore\n",
-    "                state = 2\n",
-    "    \n",
-    "### STATE 2 and 5 : the robot goes forward approx 1 thymio length ###                   \n",
-    "    if state == 2 or state == 5:\n",
-    "        time += 1         \n",
-    "        if time <= time_one_thym_dist:\n",
-    "            y = [160,160]\n",
-    "        elif time > time_one_thym_dist:\n",
-    "            y = [0,0]\n",
-    "            if state == 2:\n",
-    "                time = 0\n",
-    "                state = 3\n",
-    "            if state == 5:\n",
-    "                time = 0\n",
-    "                state = 0\n",
-    "                global_state = GLOBAL_NAVIG\n",
-    "            \n",
-    "### STATE 3 the robot rotates until its sensor (1 or 5) sees the obstacle###   \n",
-    "    if state == 3: \n",
-    "        if side == RIGHT:\n",
-    "            if right_prox <= close_thresh + adjust:\n",
-    "                y = [160,0]\n",
-    "            if right_prox > close_thresh + adjust:\n",
-    "                state = 4\n",
-    "        if side == LEFT:\n",
-    "            if left_prox <= close_thresh + adjust:\n",
-    "                y = [0,160]\n",
-    "            if left_prox > close_thresh + adjust:\n",
-    "                state = 4\n",
-    "                \n",
-    "### STATE 4 the robot follows the obstacle on its length until its sees nothing###             \n",
-    "    if state == 4:\n",
-    "        left_prox_adjust = left_prox -adjust2//sensor_scale\n",
-    "        right_prox_adjust = right_prox -adjust2//sensor_scale\n",
-    "        if side == RIGHT:\n",
-    "            y = [80,80+right_prox_adjust*constant_scale]\n",
-    "        if side == LEFT:\n",
-    "            y = [80+left_prox_adjust*constant_scale,80]\n",
-    "        if left_prox < close_thresh and right_prox < close_thresh:\n",
-    "            state = 5\n",
-    "        \n",
-    "    # Set motor powers\n",
-    "    motor_left_target = y[0]\n",
-    "    motor_right_target = y[1]           "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
