--- a/main.ipynb
+++ b/main.ipynb
@@ -690,6 +690,28 @@
    "source": [
     " vision.disconnect_camera()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this project we have created different components that are vision, flitering, motion control, global and local navigation, and correctly connected them whith each other. Our project is functional and the thymio is capable of reaching its objective, while staying on the optimal path and avoiding obstacles through global navigation and local avoidance. We have been able to put in practice different techniques we have seen during the semester in the Basics Of Mobile Robotics course. <br>\n",
+    "It was an interesting project both in terms of techincal aspects and in term of organisation : creating from the ground up an entire project on a relatively short period of time required us to do some compromises. Nontheless the project works well on a wide variety of tests.   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
