added local navigation code and description

--- a/main.ipynb
+++ b/main.ipynb
@@ -105,11 +105,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The local avoidance of obstacles is done through the use of an ANN (Artificial Neural Network).<br>\n",
+    "In our case we have a single layer neural network composed of two neurons. We feed them the values of the 5 front sensors and they output a speed for each motor in order to avoid the obstacle. We also added a memory which helps the thymio continue moving despite the lack of input from the sensors once the obstacle is partially avoided."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function is located in 'src/movement' "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def local_avoid(speed_robot, node):\n",
+    "    # global prox_and_memory\n",
+    "    prox_and_memory[0:5] = np.array([x for x in node['prox.horizontal'][0:5]])\n",
+    "    w= np.array([[80, 20, -25, -20, -80, 12, 0],[-80, -20, -20, 20, 80, 0, 12]])\n",
+    "    v= w.dot(prox_and_memory)\n",
+    "    if (abs(v) > 2200).any():\n",
+    "        prox_and_memory[5] = 0\n",
+    "        prox_and_memory[6] = 0\n",
+    "        speed_robot = (v / k_ann).astype(int) + offset_ann\n",
+    "    else:\n",
+    "        speed_robot += (v / 200).astype(int)\n",
+    "\n",
+    "    prox_and_memory[5:7] = (speed_robot / 10).astype(int)\n",
+    "\n",
+    "    return speed_robot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function takes as input speed_robot, which is the speed calculated thanks to the other modules (vision and kakman filter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The weights of the neurons are set in the variable w and were manually tweaked to correctly avoid obstacles. The last two values are used for the memory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The if statment is there to distinguish two cases : \n",
+    "<ol>\n",
+    "<li>If the robot is close to the obstacle, it only avoids the object, the speed_robot is completely overwritten by the local avoidance.\n",
+    "<li>If the robot is far enough we add the output of the neurons to robot_speed therfore the robot still wants to go back on its planned trajectory. "
+   ]
   },
   {
    "cell_type": "markdown",
