--- a/main.ipynb
+++ b/main.ipynb
@@ -299,37 +299,152 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The different functions disccused further down are located in 'src/movement.py'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### clientAsync"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We decided to use clientAsync to pass speed values to and from the thymio, because it was a better options in terms of speed and simplicity than having to create custom events and using event based programming directly on the thymio. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### runable code (using the thymio) "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tdmclient import ClientAsync\n",
+    "client = ClientAsync()\n",
+    "node = await client.wait_for_node()\n",
+    "await node.lock()\n",
+    "await node.wait_for_variables()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "start the robot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set_speed \n",
+    "speed_robot = [100,-100]\n",
+    "v = {\n",
+    "    \"motor.left.target\":  [speed_robot[0]],\n",
+    "    \"motor.right.target\": [speed_robot[1]],\n",
+    "}\n",
+    "await node.set_variables(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "measure the robot's speed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'picture' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24524/550665607.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m(\u001b[0m\u001b[0mpicture\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpng\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'picture' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "left speed : 98 right speed : -99\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "#get_speed\n",
+    "right_speed = node['motor.right.speed']\n",
+    "left_speed = node['motor.left.speed']\n",
+    "print('left speed :',left_speed,'right speed :',right_speed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stop the robot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set_speed \n",
+    "speed_robot = [0,0]\n",
+    "v = {\n",
+    "    \"motor.left.target\":  [speed_robot[0]],\n",
+    "    \"motor.right.target\": [speed_robot[1]],\n",
+    "}\n",
+    "await node.set_variables(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### compute_speed()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The last part of movement we havent discussed is the compute_speed() function. "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def compute_speed(vision, actual_pos, target_pos, min_angle, offset_speed, k_forward, k_rot, is_near_checkpoint):\n",
+    "    wheel_radius = utils.WHEEL_RADIUS_MM * vision.mm2px\n",
+    "    robot_width  = utils.THYMIO_WIDTH_MM * vision.mm2px\n",
+    "    delta_pos = target_pos - actual_pos[0:2]\n",
+    "    alpha = -actual_pos[2] + np.arctan2(delta_pos[1], delta_pos[0])\n",
+    "    alpha = (alpha + np.pi) % (2 * np.pi) - np.pi\n",
+    "    if (abs(alpha) > min_angle) & is_near_checkpoint:\n",
+    "        return [int( k_rot * alpha * robot_width / 2 / wheel_radius),\n",
+    "                int(-k_rot * alpha * robot_width / 2 / wheel_radius)]\n",
+    "    else:\n",
+    "        speed_left  = offset_speed + k_forward * alpha\n",
+    "        speed_right = offset_speed - k_forward * alpha\n",
+    "        speed = [int(speed_left), int(speed_right)]\n",
+    "        return speed"
+   ]
   },
   {
    "cell_type": "markdown",
